--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@types/mocha": "^2.2.41",
     "chromedriver": "^2.31.0",
     "co": "^4.6.0",
-    "fs": "0.0.1-security",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-env": "^0.4.4",
     "grunt-execute": "^0.2.2",
     "grunt-mocha-test": "^0.13.2",
     "grunt-ts": "^6.0.0-beta.16",
